loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:10: error: value à is not a member of Int
for (pas <- 1 à 3){
              ^