loopfor.LoopStairs.scala.code
while (!estFaceMur()) {
  avance()
} //avance jusqu'à l'escalier
for (marches <- 1 to 8){
  gauche()
  avance()
  droite()
  avance()
}
for (pas <- 1 à 3){
  avance()
}